<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">关于</string>
    <string name="about_chileaf">关于奇力</string>
    <string name="adc">阻抗: %s</string>
    <string name="adc_error">阻抗测量失败</string>
    <string name="adc_measured_ind">阻抗测量…</string>
    <string name="add">添加</string>
    <string name="age_18">18</string>
    <string name="age_colon">年龄:</string>
    <string name="alarm_edit">闹钟编辑</string>
    <string name="alarm_fri">周五</string>
    <string name="alarm_mon">周一</string>
    <string name="alarm_name">闹钟名称:</string>
    <string name="alarm_sat">周六</string>
    <string name="alarm_setting">闹钟设置</string>
    <string name="alarm_sun">周日</string>
    <string name="alarm_thu">周四</string>
    <string name="alarm_tue">周二</string>
    <string name="alarm_wen">周三</string>
    <string name="app_name">X-Fitness</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="armband">臂带</string>
    <string name="battery_level">电量:%d%%</string>
    <string name="bluetooth_disabled_info">蓝牙适配器已关闭，点击下面按钮开启。</string>
    <string name="bluetooth_disabled_title">蓝牙已关闭</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="boxing_box">Boxing 可以通过APP连接设备从而知道实时的你摆动的3D数据和陀螺仪数据，从而分析出的摆动的幅度范围和数值的大小.</string>
    <string name="brvah_app_name">Library</string>
    <string name="brvah_load_end">没有更多数据</string>
    <string name="brvah_load_failed">加载失败，请点我重试</string>
    <string name="brvah_loading">正在加载中...</string>
    <string name="button_enable">开启</string>
    <string name="calorie_colon">卡路里:</string>
    <string name="calorie_value">%.1f cal</string>
    <string name="cancel">取消</string>
    <string name="changelog_full_title">Change Log</string>
    <string name="changelog_ok_button">OK</string>
    <string name="changelog_show_full">More…</string>
    <string name="changelog_title">"What's New"</string>
    <string name="changelog_version_format">Version %s</string>
    <string name="character_counter_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="chart_heart_rate_no_data">暂无心率数据</string>
    <string name="chart_heart_rate_unit">单位:bpm</string>
    <string name="check_update">检查更新</string>
    <string name="clear_bonded_device">清除已绑定设备</string>
    <string name="colon"> : </string>
    <string name="confirm">确定</string>
    <string name="confirm_delete">确认删除?</string>
    <string name="copy">Copy</string>
    <string name="csc_cadence">踏频</string>
    <string name="csc_cadence_unit">RPM</string>
    <string name="csc_distance">距离</string>
    <string name="csc_distance_unit_km">km</string>
    <string name="csc_distance_unit_m">m</string>
    <string name="csc_distance_unit_mile">mile</string>
    <string name="csc_distance_unit_yd">yd</string>
    <string name="csc_gear_ratio">传动比</string>
    <string name="csc_settings_units_summary">%s</string>
    <string name="csc_settings_units_title">单位</string>
    <string name="csc_settings_wheel_diameter_summary">轮周长: %s mm</string>
    <string name="csc_settings_wheel_diameter_title">轮尺寸</string>
    <string name="csc_speed">速度</string>
    <string name="csc_speed_unit_km_h">km/h</string>
    <string name="csc_speed_unit_m_s">m/s</string>
    <string name="csc_speed_unit_mph">mph</string>
    <string name="csc_total_distance">总距离</string>
    <string name="csc_total_distance_unit_km">km</string>
    <string name="csc_total_distance_unit_mile">mile</string>
    <string name="date_setting">日期设置</string>
    <string name="deep_sleep_colon">深睡 :</string>
    <string name="define_ckChangeLog" />
    <string name="device_can_not_connect">设备无法连接</string>
    <string name="device_guide_info">确保设备已开启，靠近设备才可以扫描到。</string>
    <string name="device_guide_title">未发现设备</string>
    <string name="distance_value">%.1f m</string>
    <string name="drink_remind">喝水提醒</string>
    <string name="email">邮箱</string>
    <string name="email_info">info@chileaf.com</string>
    <string name="end_time_colon">结束时间 :</string>
    <string name="error">过重</string>
    <string name="expand_button_title">Advanced</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="facebook">Facebook</string>
    <string name="female">女</string>
    <string name="fetch_1_minute_hrv_screenshot">获取1分钟的HRV快照</string>
    <string name="fetch_7_days_history">获取7天历史数据</string>
    <string name="fetch_interval_steps">获取间隔时间步数(15min)</string>
    <string name="fetch_single_press_history">获取单次按键按下历史数据</string>
    <string name="h_divider">—</string>
    <string name="health_remind">健康提醒</string>
    <string name="heart_rate_unit"> bpm</string>
    <string name="heart_rate_value">%d bpm</string>
    <string name="height_170_cm">170(cm)</string>
    <string name="height_colon">身高:</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="history_record">历史记录</string>
    <string name="hour_unit"> 时 </string>
    <string name="hr_history_detail">心率历史详情</string>
    <string name="hr_history_list">心率历史清单</string>
    <string name="hr_history_record">心率历史数据清单请求(HR)</string>
    <string name="hr_mode_switch">心率模式开关</string>
    <string name="hr_warning">心率警报</string>
    <string name="inactivity_remind">久坐提醒</string>
    <string name="interval_steps_history">间隔步数历史</string>
    <string name="interval_unit"> 分钟</string>
    <string name="is_disable">已关闭</string>
    <string name="is_enable">已开启</string>
    <string name="latest_product">最新产品</string>
    <string name="latest_version">已是最新版本</string>
    <string name="library_ckChangeLog_author">cketti</string>
    <string name="library_ckChangeLog_authorWebsite">http://cketti.de/</string>
    <string name="library_ckChangeLog_isOpenSource">true</string>
    <string name="library_ckChangeLog_libraryDescription">An Android Library to display a Change Log</string>
    <string name="library_ckChangeLog_libraryName">ckChangeLog</string>
    <string name="library_ckChangeLog_libraryVersion">1.2.2</string>
    <string name="library_ckChangeLog_libraryWebsite">https://github.com/cketti/ckChangeLog</string>
    <string name="library_ckChangeLog_licenseId">apache_2_0</string>
    <string name="library_ckChangeLog_licenseVersion">Apache Version 2.0</string>
    <string name="library_ckChangeLog_repositoryLink">https://github.com/cketti/ckChangeLog</string>
    <string name="light_sleep_colon">浅睡 :</string>
    <string name="location_permission_action">授权</string>
    <string name="location_permission_info">从Android6.0开始需要开启位置权限才可以扫描蓝牙低功耗设备。</string>
    <string name="location_permission_title">请求位置权限</string>
    <string name="low_power">熄屏</string>
    <string name="low_voltage">低电</string>
    <string name="male">男</string>
    <string name="matter_remind">提醒事项</string>
    <string name="mcu_date">测量日期: %s</string>
    <string name="mcu_time">测量时间e: %s</string>
    <string name="measure_body_age">身体年龄:%s</string>
    <string name="measure_bone">骨量:%s</string>
    <string name="measure_fat">体脂率:%s</string>
    <string name="measure_fat_rate">肥胖率:%s</string>
    <string name="measure_humidity">湿度:%s</string>
    <string name="measure_metabolic">基础代谢:%s</string>
    <string name="measure_muscle">肌肉:%s</string>
    <string name="measure_protein">蛋白率:%s</string>
    <string name="measure_quality">体重指数:%s</string>
    <string name="measure_subcutaneous">皮下脂肪率:%s</string>
    <string name="measure_temp">温度:%s℃</string>
    <string name="measure_time">%s</string>
    <string name="measure_viscera">内脏脂肪:%s</string>
    <string name="measure_weight">体重:%s</string>
    <string name="menu_about">关于</string>
    <string name="menu_devices">设备列表</string>
    <string name="menu_products">产品列表</string>
    <string name="menu_setting">设置</string>
    <string name="minute_unit"> 分 </string>
    <string name="missedcall">未接来电</string>
    <string name="mobile">手机</string>
    <string name="mobile_number">+86-13827432009</string>
    <string name="mtrl_chip_close_icon_content_description">Remove %1$s</string>
    <string name="nav_app_bar_navigate_up_description">Navigate up</string>
    <string name="nav_app_bar_open_drawer_description">Open navigation drawer</string>
    <string name="normal">正常</string>
    <string name="not_available_value">" - "</string>
    <string name="not_set">Not set</string>
    <string name="notify_usage">通知使用权</string>
    <string name="notify_usage_tip">开启通知提醒确保消息提醒可以正常工作</string>
    <string name="objectbox_objectBrowserNotificationText">"Running on port %1$d. Tap to open in the device's browser. Or run adb forward tcp:%1$d tcp:%1$d to forward the port to your host."</string>
    <string name="objectbox_objectBrowserNotificationTitle">ObjectBox Browser</string>
    <string name="other">其他</string>
    <string name="other_setting">其他设置</string>
    <string name="password_toggle_content_description">Show password</string>
    <string name="path_password_eye">M12,4.5C7,4.5 2.73,7.61 1,12c1.73,4.39 6,7.5 11,7.5s9.27,-3.11 11,-7.5c-1.73,-4.39 -6,-7.5 -11,-7.5zM12,17c-2.76,0 -5,-2.24 -5,-5s2.24,-5 5,-5 5,2.24 5,5 -2.24,5 -5,5zM12,9c-1.66,0 -3,1.34 -3,3s1.34,3 3,3 3,-1.34 3,-3 -1.34,-3 -3,-3z</string>
    <string name="path_password_eye_mask_strike_through">M2,4.27 L19.73,22 L22.27,19.46 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_eye_mask_visible">M2,4.27 L2,4.27 L4.54,1.73 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_strike_through">M3.27,4.27 L19.74,20.74</string>
    <string name="permission_location_enable">部分Android手机需要开启位置服务才可以扫描到蓝牙低功耗设备，请点击下面的按钮来开启。</string>
    <string name="single">单次</string>
</resources>