<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.cardview.widget.CardView android:id="@id/card_view" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="8.0dip" android:foreground="?android:selectableItemBackground" app:cardCornerRadius="4.0dip" app:cardElevation="4.0dip" app:contentPadding="8.0dip">
        <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="16.0dip">
            <TextView android:textSize="18.0sp" android:textColor="@android:color/black" android:id="@id/alarm_name" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/alarm_name" android:layout_centerHorizontal="true" />
            <TextView android:textAppearance="?android:textAppearanceLarge" android:id="@id/alarm_item_time" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:layout_marginBottom="8.0dip" android:layout_alignParentTop="true" android:layout_marginStart="8.0dip" android:layout_marginEnd="0.0dip" android:layout_alignParentStart="true" />
            <TextView android:id="@id/alarm_single" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/single" android:layout_alignBaseline="@id/alarm_item_time" android:layout_marginStart="5.0dip" android:layout_toEndOf="@id/alarm_item_time" />
            <com.chileaf.fitness.widget.SwitchButton android:id="@id/alarm_item_toggle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="8.0dip" android:layout_alignParentTop="true" android:layout_alignParentEnd="true" />
            <LinearLayout android:orientation="horizontal" android:id="@id/dowSelector" android:layout_width="fill_parent" android:layout_height="wrap_content" android:baselineAligned="false" android:layout_below="@id/alarm_item_time">
                <androidx.appcompat.widget.AppCompatCheckedTextView android:textAppearance="?android:textAppearanceSmall" android:textColor="@color/alarm_selector" android:gravity="center" android:id="@id/alarm_item_monday" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/alarm_mon" android:layout_weight="1.0" android:layout_marginStart="4.0dip" />
                <androidx.appcompat.widget.AppCompatCheckedTextView android:textAppearance="?android:textAppearanceSmall" android:textColor="@color/alarm_selector" android:gravity="center" android:id="@id/alarm_item_tuesday" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/alarm_tue" android:layout_weight="1.0" android:layout_marginStart="4.0dip" />
                <androidx.appcompat.widget.AppCompatCheckedTextView android:textAppearance="?android:textAppearanceSmall" android:textColor="@color/alarm_selector" android:gravity="center" android:id="@id/alarm_item_wednesday" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/alarm_wen" android:layout_weight="1.0" android:layout_marginStart="4.0dip" />
                <androidx.appcompat.widget.AppCompatCheckedTextView android:textAppearance="?android:textAppearanceSmall" android:textColor="@color/alarm_selector" android:gravity="center" android:id="@id/alarm_item_thursday" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/alarm_thu" android:layout_weight="1.0" android:layout_marginStart="4.0dip" />
                <androidx.appcompat.widget.AppCompatCheckedTextView android:textAppearance="?android:textAppearanceSmall" android:textColor="@color/alarm_selector" android:gravity="center" android:id="@id/alarm_item_friday" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/alarm_fri" android:layout_weight="1.0" android:layout_marginStart="4.0dip" />
                <androidx.appcompat.widget.AppCompatCheckedTextView android:textAppearance="?android:textAppearanceSmall" android:textColor="@color/alarm_selector" android:gravity="center" android:id="@id/alarm_item_saturday" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/alarm_sat" android:layout_weight="1.0" android:layout_marginStart="4.0dip" />
                <androidx.appcompat.widget.AppCompatCheckedTextView android:textAppearance="?android:textAppearanceSmall" android:textColor="@color/alarm_selector" android:gravity="center" android:id="@id/alarm_item_sunday" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/alarm_sun" android:layout_weight="1.0" android:layout_marginStart="4.0dip" />
            </LinearLayout>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
